# usp-lbm

./: CMakeLists.txt  README.md
boards/: hexconverter.py  nrf52840dk_nrf52840.overlay  nrf52840dk_nrf52840.overlay.lbm_toreview_and_merge  nrf54l15dk_nrf54l15_cpuapp.overlay  nucleo_l476rg.overlay  nucleo_u575zi_q.overlay  user_keys.overlay  wio_wm1110_devkit.overlay  xiao_esp32s3_esp32s3_procpu.overlay  xiao_nrf54l15_nrf54l15_cpuapp.overlay
